Corrected grammatical errors; updated markdown file.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         Hello.
     </h1>
     <p>
-        This website serves as a clock, but as you can tell, it is not yet operational.
+        This website demo serves as a clock, but as you can see, it is not yet operational.
         <br>
         Do come back in a couple days; perhaps a change will occur.
     </p>
