Added asynchronous digital clock to demo page.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
     <!--Styles-->
     <link rel="stylesheet" href="css/mini-reset.css">
-    <link rel="stylesheet" href="css/text.css">
     <link rel="stylesheet" href="css/styles.css">
 
     <!--Google Fonts-->
@@ -18,6 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap" rel="stylesheet">
 
+    <script src = "script.js" async></script>
     <title>Just A Clock</title>
 </head>
 <body>
@@ -27,10 +27,12 @@
         <!--Want a fade-in introduction-->
         Hello.
     </h1>
+    <section id = "time"></section>
     <p>
-        This website demo serves as a clock, but as you can see, it is not yet operational.
-        <br>
-        Do come back in a couple days; perhaps a change will occur.
+        This website serves as a clock.
+    </p>
+    <p>
+        Do come back in a couple days; perhaps a few more changes will occur.
     </p>
 </header>
 
