fixed a couple finer details; upadted markdown file

--- a/index.html
+++ b/index.html
@@ -28,12 +28,8 @@
         Hello.
     </h1>
     <section id = "time"></section>
-    <p>
-        This website serves as a clock.
-    </p>
-    <p>
-        Do come back in a couple days; perhaps a few more changes will occur.
-    </p>
+    <p>This website serves as a clock.</p>
+    <p>Do come back in a couple days; perhaps a few more changes will occur.</p>
 </header>
 
 </body>
